--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "apollo-server-express": "^3.5.0",
+    "express": "^4.17.1",
+    "graphql": "^15.7.2"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
