--- a/api/package.json
+++ b/api/package.json
@@ -17,8 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.5.0",
+    "datasource-sql": "^1.6.0",
     "express": "^4.17.1",
-    "graphql": "^15.7.2"
+    "graphql": "^15.7.2",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
