--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.24.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.27.1",
     "prettier": "^2.5.0"
